qtermwidget-2.2.0 / 2025-04-17
===============================
 * Fixed the problem with characters like '⧸' (U+29F8).
 * Close the session correctly before destroying it.
 * Fixed URL highlighting on wrapping.
 * Handle double-column and small characters correctly on calculating text width.
 * Fixed problem with characters wider than monospace.
 * Support combining characters.
 * Make too wide characters fit into available space.
 * Get rid of "Mq", which sometimes persisted at the top left corner after the display was updated.
 * Added support for auto-hiding inactive mouse cursor.
 * Fixed cursor blinking with subterminals.

qtermwidget-2.1.0 / 2024-11-05
===============================
 * Silenced old compilation warnings.
 * Updated translation and bumped the version.

qtermwidget-2.0.1 / 2024-06-27
===============================
 * Fixed visual artifacts due to a mistake about conversion to `std::wstring` in Qt6 port.

qtermwidget-2.0.0 / 2024-05-17
===============================
 * Ported to Qt6.
 * Used "new" signal/slot syntax.
 * Dropped `#define` for bulk timeouts.
 * Removed KDE `#include`s.
 * Dropped XKB related conditional compilation.
 * Assigned a parent to bulkTimers.
 * Removed unused Screen artifacts.
 * Added shortcuts for appscreen `default.keytab`.
 * Exposed wordCharacters property to QTermWidget API.
 * Fixed cursor positioning issues.
 * Removed `ChildProcessSetup` and directly called `onsetupChildProcess`.
 * Used PyQt6.
 * Fixed deprecated function warning.
 * Removed anchored pattern for email and url.
 * Adapted to Qt6 `QProcess::setChildProcessModifier()`.
 * Used std library find algorithm.
 * Fixed comparison of pointer addition with NULL.

qtermwidget-1.4.0 / 2023-11-05
===============================
 * TERM env variable is set to xterm-256color when not set with QTermWidget::setEnvironment().