@@ -6,5 +6,5 @@ build-backend = "sipbuild.api"
 
 [project]
 name = "QTermWidget"
-version = "2.2.0"
+version = "2.3.0"
 dependencies = ["PyQt6"]
